🐛 Fix elastic scroll issues in admin on iOS
closes https://github.com/TryGhost/Ghost/issues/9093
- set app container to `position: fixed` covering full window area to prevent elastic scroll being possible on iOS

--- a/ghost/admin/app/styles/layouts/main.css
+++ b/ghost/admin/app/styles/layouts/main.css
@@ -2,16 +2,19 @@
 /* ---------------------------------------------------------- */
 
 /*
-  Ember's app container, set height so that .gh-app and .gh-viewport
-  don't need to use 100vh where bottom of screen gets covered by iOS menus
-  http://nicolas-hoizey.com/2015/02/viewport-height-is-taller-than-the-visible-part-of-the-document-in-some-mobile-browsers.html
+  Ember's app container. Use `position: fixed`, covering full window area so
+  that scrolling on mobile doesn't trigger elastic scroll
 
   TODO: Once we have routable components it should be possible to remove this
   by moving the gh-app component functionality into the application component
   which would remove the extra div that this targets.
 */
 body > .ember-view:not(.default-liquid-destination) {
-    height: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 
 /* Main viewport, contains main content, and alerts */
